--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,10 +1,10 @@
 <h1>Sign Up Below:</h1>
 <form action='/registrations' method="POST">
-  <label>name</label>
+  <label>Name: </label>
   <input type="text" name="name">
-  <label>email</label>
+  <label>Email: </label>
   <input type="text" name="email">
-  <label>password</label>
+  <label>Password: </label>
   <input type="password" name="password">
   <input type="submit" value="Sign Up">
 </form>
